--- a/src/Components/input-field.module.css
+++ b/src/Components/input-field.module.css
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 50%;
-  height: 100%;
+  width: 100%;
+  flex: 1; /* Add this line to make the input field expand to fill the available space */
 }
 
 .form-label {
@@ -12,7 +12,7 @@
 }
 
 .form-input {
-  width: 100%;
+  flex: 1; /* Add this line to make the input field expand to fill the available space */
   padding: 0.5rem;
   font-size: 1rem;
   border: 1px solid #ccc;
@@ -31,11 +31,4 @@
 
 .form-submit:hover {
   background-color: #0062cc;
-}
-
-@media only screen and (max-width: 600px) {
-  .form-container {
-    width: 80%;
-    justify-content: flex-end;
-  }
 }
