--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,10 @@ nav a:hover {
   padding-bottom: 15px;
 }
 
+.responses-body {
+  display: flex;
+}
+
 @media only screen and (max-width: 600px) {
   .input-wrapper {
     width: 80%;
